--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,5 +17,9 @@
             <a href="/">add</a>
         </div>
     </div>
+    <main>
+        {% block main %}
+        {% endblock %}
+    </main>
 </body>
 </html>
