--- a/static/styles.css
+++ b/static/styles.css
@@ -9,6 +9,7 @@ body {
     align-items: start;
     justify-content: start;
     height: 100vh;
+    
 }
 
 .side-bar {
@@ -45,11 +46,43 @@ img {
 }
 
 main {
-    margin: 20px;
+    width: 80%;
 }
+
 ul {
+    margin: 40px;
+    width: 30%;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    align-items: start;
+}
+
+form {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    gap: 20px;
+    width: 80%;
+    justify-content: center;
+}
+
+form textarea {
+    width: 50%;
+    padding: 5px;
+}
+
+input {
+    padding: 5px;
+}
+
+form button {
+    padding: 5px 15px;
+    color: #c8c8c8;
+    background-color: black;
+    border: 0;
+    border-radius: 5px;
 }
