--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,8 +13,12 @@
             <img src="/static/Wikipedia-Logo.png" alt="">
         </div>
         <div class="side-bar-links">
+            <form action="/search" method="get" class="side-bar-search">
+                <input type="search" placeholder="search" name="searchinput">
+                <button type="submit">search</button>
+            </form>
             <a href="/">home</a>
-            <a href="/">rondom</a>
+            <a href="/random">rondom</a>
             <a href="/add">add</a>
         </div>
     </div>
