--- a/static/styles.css
+++ b/static/styles.css
@@ -86,3 +86,21 @@ form button {
     border: 0;
     border-radius: 5px;
 }
+
+.wiki-details, .search-div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    align-items: start;
+    gap: 20px;
+}
+
+.side-bar-search {
+    margin: 0;
+}
+
+a {
+    color: rgb(67, 67, 221);
+}
+
