--- a/templates/add.html
+++ b/templates/add.html
@@ -2,12 +2,12 @@
 
 {% block main %}
 
-<form method="post" action="">
+<form method="post" action="{% url 'add' %}">
     {% csrf_token %}
     <h1>Add new Wiki</h1>
-    <input placeholder="title" name="title" autocomplete="off">
-    <input type="text" name="description" placeholder="description" autocomplete="off">
-    <textarea name="details" id="details" cols="30" rows="10" placeholder="details..." autocomplete="off"></textarea>
+    <input placeholder="title" name="title" autocomplete="off" minlength="10">
+    <input type="text" name="description" placeholder="description" autocomplete="off" minlength="10">
+    <textarea name="details" id="details" cols="30" rows="10" placeholder="details..." autocomplete="off" maxlength="100"></textarea>
     <button type="submit">Add</button>
     {% if error %}
     <p style="color: rgb(255, 255, 255); width: 150px;background-color: rgb(255, 86, 86);padding: 10px;border-radius: 10px;text-align: center;">{{ error }}</p>
