--- a/templates/wiki.html
+++ b/templates/wiki.html
@@ -5,5 +5,6 @@
 <h1>{{ wiki.title }}</h1>
 <p>{{ wiki.description }}</p>
 <p>{{ wiki.details }}</p>
+<a href="/edit/{{ wiki.title }}">edit</a>
 </div>
 {% endblock %}
